# ClipForge

./: .gitattributes  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  clipforge.py  clipforge.spec  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-tauri.yml  release.yml
assets/: icon.icns
docs/: BUILD.md  PRIVACY.md  TERMS.md
legacy/: README.md  clipforge.py  clipforge.spec
legacy/.github/: release.yml.disabled
legacy/scripts/: build-linux.sh  build-macos.sh  build-windows.bat  run-unix.sh
scripts/: build-macos.sh  build.bat  build.sh  run-windows.bat  run.sh
scripts/utility/translate/: align-locales.py  fill-translations.py  run.bat  run.sh  translate-locales.mjs
tauri/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
tauri/scripts/: dev-windows.bat  fetch-sidecars.ps1  fetch-sidecars.sh  fill-translations.py  translate-locales.mjs
tauri/src/: App.css  App.tsx  api.ts  i18n.ts  main.tsx  store.ts  theme.css  types.ts  updater.ts
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/src-tauri/binaries/: README.md
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: README.md  icon.icns
tauri/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  platforms.rs  progress.rs  sidecar.rs  subs.rs
tauri/src/components/: AboutModal.tsx  AudioTab.tsx  CapabilityPills.tsx  DisclaimerModal.tsx  DownloadModal.tsx  Footer.tsx  LanguagePicker.tsx  LogPanel.tsx  OutputDirPicker.tsx  PlaylistSelectionModal.tsx  (+10 more)
(+47 files in other folders)
