[package]
name = "clipforge"
version = "0.1.1"
description = "ClipForge — Tauri skeleton"
authors = ["Michel-IT"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "clipforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros", "rt-multi-thread"] }
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
futures = "0.3"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
